Addition of SFMC Config section + buttons linking to intial article of each section to make mobile experience better

--- a/docs/docs-and-snippets.mdx
+++ b/docs/docs-and-snippets.mdx
@@ -2,24 +2,36 @@
 id: docs-and-snippets
 title: Docs & Snippets
 slug: /
-description: SSJS + JS + SQL documentation and code snippets that I find useful for developing Marketing Automation
+description: SSJS + JS + SQL + SFMC Config documentation and code snippets that I find useful for developing Marketing Automation
 ---
 
 import { LeadText } from '../src/components/LeadText.js';
 
-<LeadText content="SSJS + JS + SQL documentation and code snippets that I find useful for developing Marketing Automation." />
+<LeadText content="SSJS + JS + SQL + SFMC Config documentation and code snippets that I find useful for developing Marketing Automation." />
 
 ## Server-Side JavaScript
 
 SSJS is an XX-century-version of JavaScript paired with proprietary libraries created by Salesforce. It is one of the programmatic tools useful to leverage Marketing Cloud to its fullest potential. I am creating this documentation to make my (and hopefully also yours) work easier.
 
+<a class="button button--outline button--lg button--primary col col--6 col--offset-3" href="https://mateuszdabrowski.pl/docs/ssjs/ssjs-if-and-switch">Read about SSJS</a>
+
 ## JavaScript
 
 In this part, I am gathering selected elements of modern vanilla JavaScript that I find useful for marketing technologists. Expect guides on asynchronous calls to API and backend resources, form-focused DOM manipulation and playing with data objects.
 
+<a class="button button--outline button--lg button--primary col col--6 col--offset-3" href="https://mateuszdabrowski.pl/docs/js/js-if-and-switch">Read about JavaScript</a>
+
 ## SFMC SQL
 
-To fully leverage the Salesforce Marketing Cloud Data Extensions and Automation Studio, SQL is a must-have. Here I gathered both the language basics as well as some of the most useful snippets to copy and paste shamelessly.
+To fully leverage the Salesforce Marketing Cloud Data Extensions and Automation Studio, SQL is a must-have. Here I gathered both the language basics and some of the most useful snippets to copy and paste shamelessly.
+
+<a class="button button--outline button--lg button--primary col col--6 col--offset-3" href="https://mateuszdabrowski.pl/docs/sql/sfmc-sql-basics">Read about SQL</a>
+
+## SFMC Config
+
+There are many things in Salesforce Marketing Cloud that aren't code but have a massive impact on the code. Permissions. System Data Views. Configuration options. Here I focus on the most important ones that are crucial for Marketing Cloud developers.
+
+<a class="button button--outline button--lg button--primary col col--6 col--offset-3" href="https://mateuszdabrowski.pl/docs/config/sfmc-config-system-data-views">Read about SFMC Config</a>
 
 ## Changes
 
