Clenaup in content structure by moving old ideas as use cases to Docs & Snippets + enriching Docs & Snippets landing apge with content tree

--- a/docs/docs-and-snippets.mdx
+++ b/docs/docs-and-snippets.mdx
@@ -13,11 +13,32 @@ import { LeadText } from '../src/components/LeadText.js';
 
 SSJS is an XX-century-version of JavaScript paired with proprietary libraries created by Salesforce. It is one of the programmatic tools useful to leverage Marketing Cloud to its fullest potential. I am creating this documentation to make my (and hopefully also yours) work easier.
 
+### SSJS Documentation
+
+- [If & Switch](./ssjs/ssjs-if-and-switch.mdx)
+- [Loops](./ssjs/ssjs-loops.mdx)
+- [Debugging](./ssjs/debugging-ssjs.mdx)
+
+### SSJS Use Cases
+
+- [Engage with Countdown](./usecase/engage-with-countdown.mdx)
+- [Tailor with Data](./usecase/tailor-with-data.mdx)
+
 <a class="button button--outline button--lg button--primary col col--6 col--offset-3" href="https://mateuszdabrowski.pl/docs/ssjs/ssjs-if-and-switch">Read about SSJS</a>
 
 ## JavaScript
 
 In this part, I am gathering selected elements of modern vanilla JavaScript that I find useful for marketing technologists. Expect guides on asynchronous calls to API and backend resources, form-focused DOM manipulation and playing with data objects.
+
+### JS Documentation
+
+- [If & Switch](./js/js-if-and-switch.mdx)
+- [Loops](./js/js-loops.mdx)
+
+### JS Use Cases
+
+- [Engage with Countdown](./usecase/engage-with-countdown.mdx)
+- [Tailor with Data](./usecase/tailor-with-data.mdx)
 
 <a class="button button--outline button--lg button--primary col col--6 col--offset-3" href="https://mateuszdabrowski.pl/docs/js/js-if-and-switch">Read about JavaScript</a>
 
@@ -25,11 +46,32 @@ In this part, I am gathering selected elements of modern vanilla JavaScript that
 
 To fully leverage the Salesforce Marketing Cloud Data Extensions and Automation Studio, SQL is a must-have. Here I gathered both the language basics and some of the most useful snippets to copy and paste shamelessly.
 
+### SQL Documentation
+
+- [SQL Basics](./sql/sfmc-sql-basics.mdx)
+- [Select](./sql/sfmc-sql-select.mdx)
+- [From](./sql/sfmc-sql-from.mdx)
+- [Join](./sql/sfmc-sql-join.mdx)
+- [Where](./sql/sfmc-sql-where.mdx)
+- [Like](./sql/sfmc-sql-like.mdx)
+- [String Functions](./sql/sfmc-sql-string-functions.mdx)
+- [Date Functions](./sql/sfmc-sql-date-functions.mdx)
+- [Numeric Functions](./sql/sfmc-sql-numeric-functions.mdx)
+- [Conversion Functions](./sql/sfmc-sql-conversion-functions.mdx)
+
+### SQL Snippets
+
+- [Debugging Email Sends](.sql/sfmc-sql-snippet-debugging-email-sends.mdx)
+
 <a class="button button--outline button--lg button--primary col col--6 col--offset-3" href="https://mateuszdabrowski.pl/docs/sql/sfmc-sql-basics">Read about SQL</a>
 
 ## SFMC Config
 
 There are many things in Salesforce Marketing Cloud that aren't code but have a massive impact on the code. Permissions. System Data Views. Configuration options. Here I focus on the most important ones that are crucial for Marketing Cloud developers.
+
+- [Permissions](./config/sfmc-config-permissions.mdx)
+- [System Data Views](./config/sfmc-config-system-data-views.mdx)
+- [Behavioral Triggers](./config/sfmc-config-behavioral-triggers.mdx)
 
 <a class="button button--outline button--lg button--primary col col--6 col--offset-3" href="https://mateuszdabrowski.pl/docs/config/sfmc-config-system-data-views">Read about SFMC Config</a>
 
