--- a/docs/usecase/tailor-with-data.mdx
+++ b/docs/usecase/tailor-with-data.mdx
@@ -7,7 +7,7 @@ description: Everyone and his boss are talking about personalisation. Most stop 
 
 import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
-import { LeadText } from '../src/components/LeadText.js';
+import { LeadText } from '../../src/components/LeadText.js';
 
 <LeadText content="Everyone and his boss are talking about personalisation. Most stop at tailoring the content. Don't be that person. Utilise the power of simple data logic and control the user flows." />
 
