--- a/docs/usecase/engage-with-countdown.mdx
+++ b/docs/usecase/engage-with-countdown.mdx
@@ -6,8 +6,8 @@ description: Start boosting conversion rates right now! There are many ways to e
 
 import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
-import { LeadText } from '../src/components/LeadText.js';
-import { Countdown } from '../src/components/Countdown.js';
+import { LeadText } from '../../src/components/LeadText.js';
+import { Countdown } from '../../src/components/Countdown.js';
 
 <LeadText content="Start boosting conversion rates right now! There are many ways to engage customers, and urgency is the king among them. Learn how to leverage it today." />
 
